{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 63,
  "lineage": "442a9a02-2b4e-ed66-6740-324ae3a38c5f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "danit-cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:400196081636:security-group/sg-02e37995ed220edbc",
            "description": "Cluster communication with worker nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02e37995ed220edbc",
            "ingress": [],
            "name": "agrynov-eks-sg",
            "name_prefix": "",
            "owner_id": "400196081636",
            "region": "eu-central-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "test-agrynov",
              "Name": "agrynov-eks-sg",
              "TfControl": "true",
              "owner": "agrynov"
            },
            "tags_all": {
              "Environment": "test-agrynov",
              "Name": "agrynov-eks-sg",
              "TfControl": "true",
              "owner": "agrynov"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d36300b8ac09e636"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "kubeedge-cluster-ingress-workstation-https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "95.216.201.238/32"
            ],
            "description": "Allow workstation to communicate with the cluster API Server",
            "from_port": 443,
            "id": "sgrule-2799618523",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "eu-central-1",
            "security_group_id": "sg-02e37995ed220edbc",
            "security_group_rule_id": "sgr-0e4f16e2dbe1bb152",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.danit-cluster",
            "data.http.workstation-external-ip"
          ]
        }
      ]
    }
  ]
}